--- a/package.json
+++ b/package.json
@@ -9,18 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^44.1.0",
+    "@ckeditor/ckeditor5-react": "^9.4.0",
+    "antd": "^5.22.7",
+    "axios": "^1.7.9",
+    "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
     "icons": "^1.0.0",
     "next": "15.1.3",
+    "next-nprogress-bar": "^2.4.3",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-spinners": "^0.15.0"
+    "react-icons": "^5.4.0",
+    "react-image-crop": "^11.0.7",
+    "react-select": "^5.9.0",
+    "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^4.12.23",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
