--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-image-crop": "^11.0.7",
+    "react-qr-code": "^2.0.15",
     "react-select": "^5.9.0",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.2",
