--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "icons": "^1.0.0",
-    "next": "15.1.3",
+    "next": "^15.5.3",
     "next-nprogress-bar": "^2.4.3",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.5",
