--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^44.1.0",
     "@ckeditor/ckeditor5-react": "^9.4.0",
+    "@types/qrcode": "^1.5.5",
     "antd": "^5.22.7",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "icons": "^1.0.0",
+    "lucide-react": "^0.544.0",
     "next": "^15.5.3",
     "next-nprogress-bar": "^2.4.3",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.5",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
