--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@ckeditor/ckeditor5-build-classic": "^44.1.0",
     "@ckeditor/ckeditor5-react": "^9.4.0",
     "@types/qrcode": "^1.5.5",
+    "@yudiel/react-qr-scanner": "^2.3.1",
     "antd": "^5.22.7",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "icons": "^1.0.0",
