--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "html5-qrcode": "^2.3.8",
     "icons": "^1.0.0",
     "lucide-react": "^0.544.0",
     "next": "^15.5.3",
